# api-kaianolevine-com

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  evaluator.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: ADR-0001-migrations-raw-sql.md  ADR-0002-wcs-entity-substrate.md  ADR-0003-versioned-extractions-and-corrections.md  ADR-0004-rebuild-wcs-corpus.md
migrations/: 001_init.sql  002_expand_evaluations.sql  008_evaluation_flow_name.sql  010_wcs_notes.sql  017_wcs_qa_embeddings.sql  018_wcs_qa_eval_runs.sql  019_wcs_entity_substrate.sql
src/deejay_sets_api/: auth.py  config.py  models.py  schemas.py
src/deejay_sets_api/routers/: catalog.py  contact.py  evaluations.py  flags.py  ingest.py  live_plays.py  (+4 more)
src/kaianolevine_api/: auth.py  config.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_auth.py  test_evaluations.py  test_flags.py  test_ingest.py  test_live_plays.py  test_reconciliation.py  test_sets.py  test_spotify.py  test_stats.py  test_version.py  test_wcs_admin_endpoints.py  test_wcs_auth.py  test_wcs_composition_service.py  test_wcs_entity_substrate_models.py  test_wcs_extraction_schemas.py  test_wcs_notes.py  test_wcs_qa.py  test_wcs_source_visibility.py  test_wcs_sources_endpoint.py  test_wcs_wiki_endpoints.py  test_webhook.py
tests/evals/: conftest.py  judge.py  metrics.py  questions.yaml  results.py  test_harness.py
tests/unit/: test_chunker.py  test_citations.py  test_eval_metrics.py  test_flatten.py  test_loop.py  test_retrieval.py
(+40 files in other folders)
